// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review with proper card data renders back card content on clicking show 1`] = `
Array [
  "back of card",
  <button
    className="sc-bdVaJa boUuIV"
    onClick={[Function]}
  >
    Wrong
  </button>,
  <button
    className="sc-bdVaJa boUuIV"
    onClick={[Function]}
  >
    Correct
  </button>,
]
`;

exports[`Review with proper card data renders front card content on load 1`] = `
Array [
  "front of card",
  <button
    className="sc-bdVaJa boUuIV"
    onClick={undefined}
  >
    Reveal card
  </button>,
]
`;
